# fmn

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .s2iignore  .travis.yml  .zuul.yaml  CHANGELOG.rst  FeedQueue.py  MANIFEST.in  README.md  README.rst  RULES.rst  TODO.md  Vagrantfile  Vagrantfile.example  alembic.ini  consumer.toml.example  createdb.py  database.rst  database.txt  dev-data.py  dev-requirements.txt  fmn-web.wsgi  generate-typescript-types.py  pyproject.toml  python-fmn-sse.spec  python-fmn.spec  renovate.json  requirements-test.txt  requirements.txt  run-test.py  sender.toml.example  setup-consumer.py  setup-lib.py  setup-rules.py  setup-web.py  setup.py  sse-server.py  sse-webserver.py  (+3 more)
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: label-when-deployed.yaml  main.yaml
.reuse/: dep5
.s2i/: environment  httpd.conf  run-api.sh  run-collectd.sh  run-consumer.sh  run-frontend.sh  run-sender-email.sh  run-sender-irc.sh  run-sender-matrix.sh  run-sender.sh
LICENSES/: LicenseRef-Fedora-trademark.txt  LicenseRef-RedHat-trademark.txt
alembic/: env.py
alembic/versions/: 167e0e6dd4e5_make_code_path_longer.py  18ebf3181f87_add_a_negated_column_for_rules.py  1b6e419ea1a6_add_threshold1_to_existing_prefs.py  1be98d56336_drop_the_mention_rule_from_the_defaults.py  2136a1f22f1f_cull_removed_rules.py  226fd58fe7e5_ignore_taskotron_messages_in_the_main_.py  24533471e302_add_the_verbose_column.py  2ea9623b21fa_add_an_active_field_to_filter.py  33082c0ecf3f_add_presentation_booleans.py  362efe8fd524_add_new_masher_rules.py  38c9c18d342e_add_new_mdapi_rule.py  3de9ad66862f_cascade_removed_rules_to_filters.py  4a95022fd7f3_add_another_presentation_boolean.py  5403906cbd9f_add_new_taskotron_filter.py  59ee93c4bf71_add_the_oneshot_column.py  9987c7c958c7_get_ci_error_messages.py  c369fd8ee75c_replace_pkgdb_package_with_git_repo_new.py
ansible/: vagrant-playbook.yml
apache/: fmn.web.conf  fmn.web.wsgi
changelog.d/: +aiosmtplib-3.fixed.md  +destinations_modal_close.fixed  +fasjson-redirects.fixed  +old-fmn.changed.md  +rewrite.changed.md  +splitted-schemas.changed  1064.added  1092.added  826.fixed  869.added  869.changed  870.removed  877.fixed  878.fixed  879.fixed  884.fixed  885.fixed  890.fixed  892.fixed  895.added  912.fixed  916.added  922.fixed  971.fixed  984.fixed  PR913.feature  PR933.changed  PR933.changed.1  changelog_template.jinja
config/: collectd-fmn.conf.example  collectd-types.db  consumer.toml.example  logging.yaml.example
devel/: filterdiff.py
devel/ansible/: ansible.cfg  playbook.yml
docs/: Makefile  architecture.rst  changelog.md  components.md  conf.py  configuration.rst  contributing.md  contributing.rst  create_db_schema  glossary.rst  index.md  index.rst  install.md  installation.rst  release.md  release_notes.md  rules.md  sse.rst  using.md
docs/_static/: custom.css
docs/images/: fmn-components.drawio
docs/reference/: fmn.consumer.rst  fmn.lib.rst  fmn.rules.rst  index.rst
fedmsg.d/: endpoints.py  fas_credentials.py  fmn.py  logging.py  sse.py  ssl.py  testconfig.py
fmn/: __init__.py  celery.py  config.py  constants.py  consumer.py  dogpile_backports.py  exceptions.py  fasjson_client.py  fmn_fasshim.py  formatters.py  tasks.py  util.py
fmn-messages/: README.md  pyproject.toml
fmn-messages/fmn_messages/: rule.py
fmn/api/: __init__.py  api_models.py  auth.py  cli.py  config.py  database.py  distgit.py  fasjson.py  main.py  messaging.py  model.py
fmn/backends/: __init__.py  base.py  datagrepper.py  fasjson.py  pagure.py
fmn/cache/: __init__.py  base.py  cli.py  rules.py  tracked.py  util.py
fmn/consumer/: __init__.py  backend.py  cache.py  consumer.py  destination.py  digests.py  filter.py  fmn_fasshim.py  generation_rule.py  notification.py  producer.py  requester.py  rule.py  send_queue.py  tracking_rule.py  util.py  utils.py  worker.py
fmn/core/: amqp.py  cli.py  collectd.py  config.py  constants.py  util.py  version.py
fmn/database/: __init__.py  cli.py  main.py  setup.py
fmn/delivery/: service.py
fmn/filters/: __init__.py  ansible.py  askbot.py  bodhi.py  generic.py  pkgdb.py
fmn/lib/: __init__.py  db.py  defaults.py  hinting.py  model.py  models.py  pkgdb.py
fmn/messages/: base.py  rule.py
fmn/rules/: __init__.py  anitya.py  ansible.py  askbot.py  autocloud.py  bodhi.py  bugzilla.py  buildsys.py  cache.py  ci.py  cli.py  compose.py  coprs.py  faf.py  fas.py  fedbadges.py  fedimg.py  fedocal.py  fedora_elections.py  fedoratagger.py  filter.py  fmn.py  fmn_notifications.py  generic.py  git.py  github.py  greenwave.py  hotness.py  infragit.py  jenkins.py  kerneltest.py  koschei.py  logger.py  mailman.py  mbs.py  mdapi.py  meetbot.py  nagios.py  notification.py  nuancier.py  (+10 more)
fmn/sender/: cli.py  config.py  consumer.py  email.py  handler.py  irc.py  matrix.py
fmn/sse/: FeedQueue.py  __init__.py  server.py  sse_webserver.py  subscriber.py
fmn/tests/: __init__.py  test_celery.py  test_config.py  test_confirmations.py  test_consumer.py  test_defaults.py  test_formatters.py  test_hinting.py  test_models.py  test_recipients.py  test_regexes.py  test_sse_backend.py  test_style.py  test_tasks.py
fmn/web/: app.py  converters.py  default_config.py  forms.py  main.py
fmn_sse/: __init__.py
frontend/: .env.development  .env.production  .env.staging  .env.test  .eslintrc.cjs  .gitignore  README.md  env.d.ts  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.config.json  tsconfig.vitest.json  vite.config.ts  vite.vagrant.config.ts  vitest.workspace.ts
frontend/src/: App.vue  main.ts  tests.ts
scripts/: matchtest.py
systemd/: fmn-backend@.service  fmn-celerybeat.service  fmn-digests@.service  fmn-sse-python2@.service  fmn-sse-python3@.service  fmn-sse@.service  fmn-worker@.service
tests/: conftest.py  message.py  test_hinting.py  test_server.py  test_sse_subscriber.py  test_sse_webserver.py  test_style.py
tests/api/: conftest.py  test_api_models.py  test_auth.py  test_cli.py  test_config.py  test_database.py  (+5 more)
(+355 files in other folders)
