[tool.poetry]
name = "fmn"
version = "3.0a0"
description = "Fedora Messaging Notifications"
authors = [
    "Aurélien Bompard <aurelien@bompard.org>",
    "James Richardson <jamricha@redhat.com>",
    "Nils Philippsen <nils@redhat.com>",
    "Ryan Lerch <rlerch@redhat.com>",
]
license = "MIT"
maintainers = [
    "Aurélien Bompard <aurelien@bompard.org>",
    "James Richardson <jamricha@redhat.com>",
    "Nils Philippsen <nils@redhat.com>",
    "Ryan Lerch <rlerch@redhat.com>",
]
readme = "README.md"
homepage = "https://github.com/fedora-infra/fmn"
repository = "https://github.com/fedora-infra/fmn"
# documentation = "https://github.com/fedora-infra/fmn/wiki"
keywords = ["fedora", "messaging", "notifications"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Web Environment",
    "Framework :: AsyncIO",
    "Framework :: FastAPI",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: POSIX :: Linux",
    "Topic :: Communications",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"
click-plugins = "^1.1.1"
python-dotenv = "^0.20.0 || ^0.21.0"
fastapi = {version = "^0.78.0 || ^0.79.0 || ^0.80.0 || ^0.81.0 || ^0.82.0 || ^0.83.0 || ^0.84.0 || ^0.85.0", optional = true}
uvicorn = {version = "^0.18.2 || ^0.19.0", optional = true}
httpx = {version = "^0.23.0", optional = true}
fasjson-client = {version = "^1.0.7", optional = true}
fedora-messaging = {version = "^3.1.0", optional = true}
pika = {version = "^1.3.0", optional = true}
"dogpile.cache" = {version = "^1.1.8", optional = true}
tomli = {version = "^2.0.1", optional = true}
aio-pika = {version = "^8.2.0", optional = true}
irc = {version = "^20.1.0", optional = true}
aiosmtplib = {version = "^1.1.6", optional = true}
aiosqlite = {version = "^0.17.0", optional = true}
psycopg2 = {version = "^2.9.3", optional = true}
asyncpg = {version = "^0.26.0", optional = true}
alembic = {version = "^1.8.1", optional = true}
SQLAlchemy = {version = "^1.4.41", optional = true}

[tool.poetry.dev-dependencies]
poetry = "^1.2.0b2"
black = "^22.6.0"
isort = "^5.10.1"
pytest = "^7.1.2"
pytest-asyncio = "^0.18.3 || ^0.19.0 || ^0.20.0"
pytest-black = "^0.3.12"
pytest-cov = "^3.0.0 || ^4.0.0"
pytest-flake8 = "^1.1.1"
pytest-isort = "^3.0.0"
tox = "^3.25.1"
greenlet = "^1.1.2"
toml = "^0.10.2"
responses = "^0.21.0 || ^0.22.0"
pytest-mock = "^3.8.2"
flake8 = ">=4,<6"

[tool.poetry.extras]
api = [
    "fastapi",
    "uvicorn",
    "httpx",
    "SQLAlchemy",
]
consumer = [
    "fedora-messaging",
    "pika",
    "fasjson-client",
    "dogpile.cache",
    "SQLAlchemy",
]
sender-email = [
    "tomli",
    "aio-pika",
    "aiosmtplib",
]
sender-irc = [
    "tomli",
    "aio-pika",
    "irc",
]
database = ["SQLAlchemy", "alembic"]
sqlite = ["aiosqlite"]
postgresql = ["psycopg2", "asyncpg"]

[tool.pytest.ini_options]
addopts = "--black --cov-config .coveragerc --cov=fmn --cov-report term --cov-report xml --cov-report html --flake8 --isort --ignore fmn/consumer --ignore fmn/sender"
flake8-max-line-length = 100
asyncio_mode = "auto"

[tool.isort]
line_length = 100
profile = "black"

[tool.black]
line-length = 100

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
fmn = "fmn.core.cli:cli"
fmn-sender = "fmn.sender.cli:main"

[tool.poetry.plugins."fmn.cli"]
api = "fmn.api.cli:api"
database = "fmn.database.cli:database"
