# SPDX-FileCopyrightText: Contributors to the Fedora Project
#
# SPDX-License-Identifier: MIT

[tool.poetry]
name = "fmn"
version = "3.3.0"
description = "Fedora Messaging Notifications"
authors = [
    "Aurélien Bompard <aurelien@bompard.org>",
    "James Richardson <jamricha@redhat.com>",
    "Nils Philippsen <nils@redhat.com>",
    "Ryan Lerch <rlerch@redhat.com>",
]
license = "MIT"
maintainers = [
    "Aurélien Bompard <aurelien@bompard.org>",
    "James Richardson <jamricha@redhat.com>",
    "Nils Philippsen <nils@redhat.com>",
    "Ryan Lerch <rlerch@redhat.com>",
]
readme = "README.md"
homepage = "https://github.com/fedora-infra/fmn"
repository = "https://github.com/fedora-infra/fmn"
# documentation = "https://github.com/fedora-infra/fmn/wiki"
keywords = ["fedora", "messaging", "notifications"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Framework :: AsyncIO",
    "Framework :: FastAPI",
    "Framework :: Pydantic",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: POSIX :: Linux",
    "Topic :: Communications",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
include = [
    { path = "docs", format = "sdist" },
    { path = "config", format = "sdist"},
    { path = "devel", format = "sdist"},
    { path = "LICENSES", format = "sdist"},
    { path = "consumer.toml", format = "sdist"},
    { path = "sender.toml", format = "sdist"},
    { path = "tests", format = "sdist" },
    { path = "frontend", format = "sdist" },
]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"
click-plugins = "^1.1.1"
python-dotenv = ">=0.20.0,<1.0.0 || ^1.0.0"
pydantic-settings = "^2.0.2"
fastapi = {version = ">=0.109.1, <0.115.0", optional = true}
uvicorn = {version = "^0.18.2 || ^0.19.0 || ^0.20.0 || ^0.21.0 || ^0.22.0 || ^0.23.0 || ^0.24.0 || ^0.25.0 || ^0.26.0 || ^0.27.0 || ^0.28.0 || ^0.30.0", optional = true}
httpx = {version = "^0.23.0 || ^0.24.0 || ^0.25.0 || ^0.26.0 || ^0.27.0", optional = true}
fedora-messaging = {version = "^3.3.0", optional = true}
tomli = {version = "^2.0.1", optional = true}
aio-pika = {version = "^8.2.0 || ^9.0.0", optional = true}
irc = {version = "^20.1.0", optional = true}
aiosmtplib = {version = "^1.1.6 || ^2.0.0 || ^3.0.0", optional = true}
aiosqlite = {version = "^0.17.0 || ^0.18.0 || ^0.19.0 || ^0.20.0", optional = true}
psycopg2 = {version = "^2.9.3", optional = true}
asyncpg = {version = "^0.26.0 || ^0.27.0 || ^0.28.0 || ^0.29.0", optional = true}
alembic = {version = "^1.8.1", optional = true}
SQLAlchemy = {version = "^1.4.41 || ^2.0.0", optional = true}
sqlalchemy-helpers = {version = ">=0.11", optional = true}
httpx-gssapi = {version = "^0.1.7 || ^0.2.0 || ^0.3.0", optional = true}
backoff = {version = "^2.2.1", optional = true}
cashews = {extras = ["redis"], version = "^7.0.0", optional = true}
matrix-nio = {version = "^0.20.1 || ^0.21.0 || ^0.22.0 || ^0.23.0 || ^0.24.0 || ^0.25.0", optional = true}

# Message schemas. The reference list of all message schemas is in
# https://github.com/fedora-infra/fedora-messaging/blob/develop/docs/schema-packages.txt
anitya-schema = {version = "*", optional = true}
bodhi-messages = {version = "*", optional = true}
bugzilla2fedmsg-schema = {version = "*", optional = true}
ci-messages = {version = "*", optional = true}
copr-messaging = {version = "*", optional = true}
discourse2fedmsg-messages = {version = "*", optional = true}
fedocal-messages = {version = "*", optional = true}
fedorainfra-ansible-messages = {version = "*", optional = true}
fedora-elections-messages = {version = "*", optional = true}
fedora-image-uploader-messages = {version = "*", optional = true}
fedora-messaging-git-hook-messages = {version = "*", optional = true}
fedora-messaging-the-new-hotness-schema = {version = "*", optional = true}
fedora-planet-messages = {version = "*", optional = true}
fmn-messages = {version = "*", optional = true}
kerneltest-messages = {version = "*", optional = true}
koji-fedoramessaging-messages = {version = "*", optional = true}
koschei-messages = {version = "*", optional = true}
maubot-fedora-messages = {version = "*", optional = true}
mediawiki-messages = {version = "*", optional = true}
meetbot-messages = {version = "*", optional = true}
mdapi-messages = {version = "*", optional = true}
noggin-messages = {version = "*", optional = true}
nuancier-messages = {version = "*", optional = true}
pagure-messages = {version = "*", optional = true}
tahrir-messages = {version = "*", optional = true}

[tool.poetry.group.dev.dependencies]
poetry = "^1.2.0b2"
"fmn-messages" = {path = "./fmn-messages", develop = true}
black = "^24.0.0"
pytest = "^7.1.2 || ^8.0.0"
pytest-asyncio = "^0.18.3 || ^0.19.0 || ^0.20.0 || ^0.21.0 || ^0.23.0 || ^0.24.0"
pytest-cov = "^3.0.0 || ^4.0.0 || ^5.0.0"
coverage = {extras = ["toml"], version = ">=7.0.0"}
tox = "^3.25.1 || ^4.0.0"
greenlet = "^1.1.2 || ^2.0.0 || ^3.0.0"
toml = "^0.10.2"
pytest-mock = "^3.8.2"
respx = "^0.20.0 || ^0.21.0"
ruff = "^0.2.0 || ^0.3.0 || ^0.4.0 || ^0.5.0 || ^0.6.0"
towncrier = "^22.12.0 || ^23.0.0 || ^24.0.0"
sphinx = "^6.1.3 || ^7.0.0 || ^8.0.0"
myst-parser = "^1.0.0 || ^2.0.0 || ^3.0.0 || ^4.0.0"
diskcache = "^5.4.0"
reuse = "^1.1.2 || ^2.0.0 || ^3.0.0 || ^4.0.0"
pytest-timeout = "^2.1.0"

[tool.poetry.extras]
api = [
    "fastapi",
    "uvicorn",
    "httpx",
    "httpx-gssapi",
    "SQLAlchemy",
    "sqlalchemy-helpers",
    "fedora-messaging",
    "backoff",
    "cashews",
]
consumer = [
    "fedora-messaging",
    "aio-pika",
    "cashews",
    "SQLAlchemy",
    "sqlalchemy-helpers",
    "backoff",
]
sender-email = [
    "tomli",
    "aio-pika",
    "aiosmtplib",
]
sender-irc = [
    "tomli",
    "aio-pika",
    "irc",
]
sender-matrix = [
    "tomli",
    "aio-pika",
    "matrix-nio",
]
database = ["SQLAlchemy", "alembic", "sqlalchemy-helpers"]
sqlite = ["aiosqlite"]
postgresql = ["psycopg2", "asyncpg"]
schemas = [
  "anitya-schema",
  "bodhi-messages",
  "bugzilla2fedmsg-schema",
  "ci-messages",
  "copr-messaging",
  "discourse2fedmsg-messages",
  "fedocal-messages",
  "fedorainfra-ansible-messages",
  "fedora-elections-messages",
  "fedora-image-uploader-messages",
  "fedora-messaging-git-hook-messages",
  "fedora-messaging-the-new-hotness-schema",
  "fedora-planet-messages",
  "fmn-messages",
  "kerneltest-messages",
  "koji-fedoramessaging-messages",
  "koschei-messages",
  "maubot-fedora-messages",
  "mediawiki-messages",
  "meetbot-messages",
  "mdapi-messages",
  "noggin-messages",
  "nuancier-messages",
  "pagure-messages",
  "tahrir-messages",
]

[tool.poetry.plugins."fmn.tracking_rules"]
"artifacts-owned" = "fmn.rules.tracking_rules:ArtifactsOwned"
"artifacts-group-owned" = "fmn.rules.tracking_rules:ArtifactsGroupOwned"
"artifacts-followed" = "fmn.rules.tracking_rules:ArtifactsFollowed"
"related-events" = "fmn.rules.tracking_rules:RelatedEvents"
"users-followed" = "fmn.rules.tracking_rules:UsersFollowed"

[tool.poetry.plugins."fmn.filters"]
"applications" = "fmn.rules.filter:Applications"
"severities" = "fmn.rules.filter:Severities"
"my_actions" = "fmn.rules.filter:MyActions"
"topic" = "fmn.rules.filter:Topic"


[tool.pytest.ini_options]
addopts = "--cov=fmn --cov-report term --cov-report xml --cov-report html"
asyncio_mode = "auto"
timeout = 60
markers = "alembic_table_deleted: When the alembic version table has been deleted in the test"

[tool.coverage.run]
branch = true
source = ["fmn", "fmn-messages/fmn"]
omit = [
    "fmn/database/migrations/env.py",
    "fmn/database/migrations/versions/*.py",
]
concurrency = [
    "greenlet",
    "thread",
]

[tool.coverage.report]
precision = 2
fail_under = 100
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "def __repr__",
    "if TYPE_CHECKING:",
    # Don't complain if tests don't hit defensive assertion code
    "raise NotImplementedError",
    "\\.\\.\\.",
]
omit = [
    "tests/*",
]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "S", "B", "RUF"]
ignore = ["UP038"]
allowed-confusables = ["’"]

[tool.ruff.lint.isort]
known-first-party = ["fmn", "fmn_messages"]

[tool.ruff.lint.per-file-ignores]
"fmn/api/*" = ["B008", "RUF012"]
"fmn/backends/__init__.py" = ["F401"]
"fmn/core/config.py" = ["RUF012"]
"fmn/database/__init__.py" = ["F401"]
"fmn/database/model/__init__.py" = ["F401"]
"tests/*" = ["S101", "RUF012"]
"fmn-messages/fmn_messages/__init__.py" = ["F401"]
"fmn-messages/fmn_messages/rule.py" = ["RUF012"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
fmn = "fmn.core.cli:cli"
fmn-sender = "fmn.sender.cli:main"

[tool.poetry.plugins."fmn.cli"]
api = "fmn.api.cli:api"
database = "fmn.database.cli:database"
cache = "fmn.cache.cli:cache_cmd"


[tool.towncrier]
package = "fmn"
directory = "changelog.d"
filename = "docs/changelog.md"
start_string = "<!-- towncrier release notes start -->\n"
underlines = ["", "", ""]
template = "changelog.d/changelog_template.jinja"
title_format = "## [{version}](https://github.com/fedora-infra/fmn/tree/{version}) - {project_date}"
issue_format = "[#{issue}](https://github.com/fedora-infra/fmn/issues/{issue})"

[[tool.towncrier.type]]
directory = "security"
name = "Security"
showcontent = true

[[tool.towncrier.type]]
directory = "removed"
name = "Removed"
showcontent = true

[[tool.towncrier.type]]
directory = "deprecated"
name = "Deprecated"
showcontent = true

[[tool.towncrier.type]]
directory = "added"
name = "Added"
showcontent = true

[[tool.towncrier.type]]
directory = "changed"
name = "Changed"
showcontent = true

[[tool.towncrier.type]]
directory = "fixed"
name = "Fixed"
showcontent = true
